@@ -42,6 +42,9 @@ MANUAL=" Usage
 # macros
 SUFFIX="_Au_abi"
 if [ -z "$ABINIT_BIN" ] ; then exit 0 ; fi
+#
+# check for ETSF-IO support
+exit_if_no_etsf_support
 
 #
 # evaluate the starting choice about what is to run 
